fix navbar: right alignment

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -7,3 +7,7 @@
 .field_with_errors {
   display: inline-block;
 }
+
+#navbarNav {
+  flex-grow: 0;
+}
